name:                elm-editor-tools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jwoudenberg/elm-editor-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          mail@jasperwoudenberg.com
copyright:           2017 Jasper Woudenberg
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ParseElmModule
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1 && < 4
                     , indents >= 0.4.0.0 && < 0.5
                     , aeson >= 1 && < 2
                     , path >= 0.5.12 && < 0.6
                     , path-io >= 1.2.2 && < 2
                     , split >= 0.2.3.1 && < 0.3
                     , bytestring >= 0.10.8.1 && < 0.11
                     , containers >= 0.5.7.1 && < 0.6
                     , mtl >= 2.2.1 && < 3
  default-language:    Haskell2010
  other-modules:       ResolveModule
                     , Error
                     , ParseElmConfig
  ghc-options:         -Wall

executable elm-find-definition
  hs-source-dirs:      app
  main-is:             FindDefinition.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , elm-editor-tools
                     , aeson >= 1 && < 2
                     , bytestring >= 0.10 && < 0.11
  default-language:    Haskell2010

executable elm-resolve-module
  hs-source-dirs:      app
  main-is:             ResolveModule.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , elm-editor-tools
  default-language:    Haskell2010

test-suite elm-editor-tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elm-editor-tools
                     , tasty
                     , tasty-hunit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elm-editor-tools
